[project]
name = "tombot"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
  # stdlib
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "tombot.version"}

[tool.pyright]
disableOrganizeImports = true
useLibraryCodeForTypes = false

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
